@@ -31,6 +31,9 @@ BUG FIXES
   '--no-xfail', '--no-passthrough, '--no-success', and gives you just the
   failure stream. (John Arbash Meinel)
 
+* Python2.6 support was broken by the fixup feature.
+  (Arfrever Frehtes Taifersar Arahesis, #987490)
+
 * Python3 support regressed in trunk.
   (Arfrever Frehtes Taifersar Arahesis, #987514)
 
